--- a/index.html
+++ b/index.html
@@ -211,16 +211,18 @@
     <div class="mt-10 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
       
       <!-- Guitar -->
-      <div class="service-card bg-[#F4EDE4] text-[#3C2A1E] p-6 rounded-xl">
-        <div class="h-48 bg-indigo-100 flex items-center justify-center rounded-t-xl">
-          <i class="fas fa-guitar text-6xl text-indigo-600"></i>
-        </div>
-        <div class="pt-6">
-          <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Guitar</div>
-          <h3 class="mt-2 text-xl font-semibold">Acoustic & Electric Guitar</h3>
-          <p class="mt-3 text-gray-600">Begin with the fundamentals like scales and chords. Play your favorite songs or become the next rockstar with guidance at each level.</p>
-        </div>
-      </div>
+      <a href="guitar.html" class="block">
+          <div class="service-card bg-[#F4EDE4] text-[#3C2A1E] p-6 rounded-xl">
+            <div class="h-48 bg-indigo-100 flex items-center justify-center rounded-t-xl">
+              <i class="fas fa-guitar text-6xl text-indigo-600"></i>
+            </div>
+            <div class="pt-6">
+              <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Guitar</div>
+              <h3 class="mt-2 text-xl font-semibold">Acoustic & Electric Guitar</h3>
+              <p class="mt-3 text-gray-600">Begin with the fundamentals like scales and chords. Play your favorite songs or become the next rockstar with guidance at each level.</p>
+            </div>
+          </div>
+        </a>
 
       <!-- Tabla -->
       <div class="service-card bg-[#F4EDE4] text-[#3C2A1E] p-6 rounded-xl">
