email update (lets goo!)

--- a/guitar.html
+++ b/guitar.html
@@ -67,7 +67,7 @@
             <i class="fas fa-guitar text-2xl text-yellow-400"></i>
             <a href="index.html" class="font-bold text-xl hover:text-yellow-400">Cadenza</a>
         </div>
-        <div class="hidden md:flex space-x-8">
+        <div class="hiddeng md:flex space-x-8">
           <a href="#about" class="hover:text-yellow-400 transition">About</a>
           <a href="#advantages" class="hover:text-yellow-400 transition">Advantages</a>
           <a href="#instructors" class="hover:text-yellow-400 transition">Instructors</a>
