--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadenza - Indian Vocal Music Academy</title>
+
+  <!-- Tailwind CDN (for quick dev; swap to proper build in prod) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- Spline Viewer -->
   <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.39/build/spline-viewer.js"></script>
+
+  <!-- EmailJS v4 browser bundle -->
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+  ></script>
+  <script>
+    // Initialize EmailJS with your public key
+    emailjs.init("AhtLZTPsQ3L2yS1Tw");
+  </script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
@@ -83,6 +98,7 @@
     }
   </style>
 </head>
+
 <body class="text-[#3C2A1E]">
   <!-- Navigation Bar -->
   <nav class="fixed top-0 left-0 w-full z-50 bg-[#3C2A1E]/90 backdrop-blur-md shadow-md">
@@ -243,7 +259,7 @@
         </div>
         <div class="pt-6">
           <div class="uppercase tracking-wide text-sm text-emerald-500 font-semibold">Vocals</div>
-          <h3 class="mt-2 text-xl font-semibold">Hindustani Vocals</h3>
+          <h3 class="mt-2 text-xl font-semibold">Hindustani & Bollywood Vocals</h3>
           <p class="mt-3 text-gray-600">Learn voice culture, different ragas and talas while understanding the versatility of Indian culture in this performance-based course.</p>
         </div>
       </div>
@@ -255,8 +271,8 @@
         </div>
         <div class="pt-6">
           <div class="uppercase tracking-wide text-sm text-rose-500 font-semibold">Vocals</div>
-          <h3 class="mt-2 text-xl font-semibold">Bollywood Vocals</h3>
-          <p class="mt-3 text-gray-600">Sing as a hobby or learn your favorite songs. We help with vocal training and foundational skills for film music.</p>
+          <h3 class="mt-2 text-xl font-semibold">Piano</h3>
+          <p class="mt-3 text-gray-600">Learn piano as a hobby or learn your favorite songs. We help with your training and foundational skills.</p>
         </div>
       </div>
 
@@ -314,12 +330,35 @@
   <section id="contact" class="py-16 hero-gradient text-[#F4EDE4]">
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h2 class="text-3xl font-bold">Start Your Musical Journey</h2>
-      <p class="mt-4 text-lg">Fill the form and we’ll reach out to you!</p>
-      <form class="mt-8 space-y-4">
-        <input class="w-full p-3 rounded-md border border-[#D4AF37] bg-white text-[#3C2A1E]" type="text" placeholder="Your Name" required />
-        <input class="w-full p-3 rounded-md border border-[#D4AF37] bg-white text-[#3C2A1E]" type="email" placeholder="Email Address" required />
-        <textarea class="w-full p-3 rounded-md border border-[#D4AF37] bg-white text-[#3C2A1E]" rows="4" placeholder="Your Message"></textarea>
-        <button type="submit" class="bg-[#D4AF37] hover:bg-yellow-400 text-black px-6 py-3 rounded-md font-semibold transition">Send Message</button>
+      <p class="mt-4 text-lg">Fill the form and we’ll send you our next steps!</p>
+      <form id="contactForm" class="mt-8 space-y-4">
+        <input
+          name="visitor_name"
+          class="w-full p-3 rounded-md border border-[#D4AF37] bg-white text-[#3C2A1E]"
+          type="text"
+          placeholder="Your Name"
+          required
+        />
+        <input
+          id="visitor_email"
+          name="visitor_email"
+          class="w-full p-3 rounded-md border border-[#D4AF37] bg-white text-[#3C2A1E]"
+          type="email"
+          placeholder="Your Email"
+          required
+        />
+        <textarea
+          name="message"
+          class="w-full p-3 rounded-md border border-[#D4AF37] bg-white text-[#3C2A1E]"
+          rows="4"
+          placeholder="Your Message"
+        ></textarea>
+        <button
+          type="submit"
+          class="bg-[#D4AF37] hover:bg-yellow-400 text-black px-6 py-3 rounded-md font-semibold transition"
+        >
+          Send Message
+        </button>
       </form>
     </div>
   </section>
@@ -329,5 +368,30 @@
     <p>&copy; 2025 Cadenza School of Musica. All rights reserved.</p>
   </footer>
 
+  <!-- EmailJS send() handler -->
+  <script>
+    document
+      .getElementById("contactForm")
+      .addEventListener("submit", function(e) {
+        e.preventDefault();
+        // grab the email the user typed in
+        const userEmail = document.getElementById("visitor_email").value;
+
+        emailjs
+          .send(
+            "service_s69ud1n",   // ← your Service ID
+            "template_x8ylvsr",  // ← your Template ID
+            { email: userEmail } // ← keys match your template variables
+          )
+          .then(() => {
+            alert("Thanks—your message has been sent!");
+            this.reset();
+          })
+          .catch(err => {
+            console.error("EmailJS error:", err);
+            alert("Oops, something went wrong. Please try again.");
+          });
+      });
+  </script>
 </body>
 </html>
