--- a/guitar.html
+++ b/guitar.html
@@ -6,6 +6,16 @@
   <title>Cadenza Academy – Master Your Skills</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- EmailJS v4 browser bundle -->
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+  ></script>
+  <script>
+    // Initialize EmailJS with your public key
+    emailjs.init("AhtLZTPsQ3L2yS1Tw");
+  </script>
   <style>
     /* Hero background & float animation */
     .hero {
@@ -460,115 +470,118 @@
       </div>
     </section>
 
-    <!-- Get in Touch Section -->
     <section id="contact" class="py-20 bg-white">
-      <div class="container mx-auto px-6">
-        <div class="text-center mb-16">
-          <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Get In Touch</h2>
-          <div class="w-24 h-1 bg-yellow-500 mx-auto"></div>
-          <p class="text-gray-600 max-w-2xl mx-auto mt-4">
-            Have questions about our courses? Want to schedule a free trial lesson? Reach out to us!
-          </p>
+    <div class="container mx-auto px-6">
+      <div class="text-center mb-16">
+        <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Get In Touch</h2>
+        <div class="w-24 h-1 bg-yellow-500 mx-auto"></div>
+        <p class="text-gray-600 max-w-2xl mx-auto mt-4">
+          Have questions or want a free trial? Reach out!
+        </p>
+      </div>
+      <div class="flex flex-col lg:flex-row gap-12">
+        <div class="lg:w-1/2">
+          <!-- Added id="contactForm" here -->
+          <form id="contactForm" class="space-y-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+              <div>
+                <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
+                <input type="text" id="name"
+                       class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 outline-none transition"
+                       placeholder="Your name">
+              </div>
+              <div>
+                <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
+                <!-- Keep this id so we can grab it in JS -->
+                <input type="email" id="email"
+                       class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 outline-none transition"
+                       placeholder="Your email">
+              </div>
+            </div>
+            <div>
+              <label for="subject" class="block text-gray-700 font-medium mb-2">Subject</label>
+              <input type="text" id="subject"
+                     class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 outline-none transition"
+                     placeholder="Subject">
+            </div>
+            <div>
+              <label for="message" class="block text-gray-700 font-medium mb-2">Message</label>
+              <textarea id="message" rows="5"
+                        class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 outline-none transition"
+                        placeholder="Your message"></textarea>
+            </div>
+            <button type="submit"
+                    class="w-full bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-3 px-6 rounded transition duration-300">
+              Send Message
+            </button>
+          </form>
         </div>
-        <div class="flex flex-col lg:flex-row gap-12">
-          <div class="lg:w-1/2">
-            <form class="space-y-6">
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div>
-                  <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
-                  <input type="text" id="name"
-                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 outline-none transition"
-                         placeholder="Your name">
-                </div>
-                <div>
-                  <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
-                  <input type="email" id="email"
-                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 outline-none transition"
-                         placeholder="Your email">
+        <div class="lg:w-1/2">
+          <div class="bg-gray-100 p-8 rounded-lg h-full">
+            <h3 class="text-xl font-bold text-gray-800 mb-6">Contact Information</h3>
+            <div class="space-y-6">
+              <div class="flex items-start">
+                <i class="fas fa-phone-alt text-yellow-500 text-xl mt-1"></i>
+                <div class="ml-4">
+                  <h4 class="text-gray-800 font-medium">Phone</h4>
+                  <p class="text-gray-600">+91 1234567890</p>
+                  <p class="text-gray-600">Mon–Fri, 9am–5pm CST</p>
                 </div>
               </div>
-              <div>
-                <label for="subject" class="block text-gray-700 font-medium mb-2">Subject</label>
-                <input type="text" id="subject"
-                       class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 outline-none transition"
-                       placeholder="Subject">
-              </div>
-              <div>
-                <label for="message" class="block text-gray-700 font-medium mb-2">Message</label>
-                <textarea id="message" rows="5"
-                          class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 outline-none transition"
-                          placeholder="Your message"></textarea>
-              </div>
-              <button type="submit"
-                      class="w-full bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-3 px-6 rounded transition duration-300">
-                Send Message
-              </button>
-            </form>
-          </div>
-          <div class="lg:w-1/2">
-            <div class="bg-gray-100 p-8 rounded-lg h-full">
-              <h3 class="text-xl font-bold text-gray-800 mb-6">Contact Information</h3>
-              <div class="space-y-6">
-                
-                <div class="flex items-start">
-                  <div class="flex-shrink-0 mt-1">
-                    <i class="fas fa-phone-alt text-yellow-500 text-xl"></i>
-                  </div>
-                  <div class="ml-4">
-                    <h4 class="text-gray-800 font-medium">Phone</h4>
-                    <p class="text-gray-600">+91 1234567890</p>
-                    <p class="text-gray-600">Mon-Fri, 9am-5pm CST</p>
-                  </div>
-                </div>
-                <div class="flex items-start">
-                  <div class="flex-shrink-0 mt-1">
-                    <i class="fas fa-envelope text-yellow-500 text-xl"></i>
-                  </div>
-                  <div class="ml-4">
-                    <h4 class="text-gray-800 font-medium">Email</h4>
-                    <p class="text-gray-600">info@Cadenza.com</p>
-                    <p class="text-gray-600">support@Cadenza.com</p>
-                  </div>
+              <div class="flex items-start">
+                <i class="fas fa-envelope text-yellow-500 text-xl mt-1"></i>
+                <div class="ml-4">
+                  <h4 class="text-gray-800 font-medium">Email</h4>
+                  <p class="text-gray-600">info@Cadenza.com</p>
+                  <p class="text-gray-600">support@Cadenza.com</p>
                 </div>
               </div>
-              <div class="mt-8">
-                <h4 class="text-gray-800 font-medium mb-4">Follow Us</h4>
-                <div class="flex space-x-4">
-                  <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition duration-300">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                  <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition duration-300">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition duration-300">
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                  <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition duration-300">
-                    <i class="fab fa-youtube"></i>
-                  </a>
-                </div>
+            </div>
+            <div class="mt-8">
+              <h4 class="text-gray-800 font-medium mb-4">Follow Us</h4>
+              <div class="flex space-x-4">
+                <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" class="w-10 h-10 rounded-full bg-gray-200 hover:bg-yellow-500 flex items-center justify-center text-gray-700 hover:text-white transition">
+                  <i class="fab fa-youtube"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Footer -->
 
-    <script>
-      // Smooth scrolling
-      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function(e) {
-          e.preventDefault();
-          document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
+
+  <!-- EmailJS send() handler -->
+  <script>
+    document.getElementById("contactForm")
+      .addEventListener("submit", function(e) {
+        e.preventDefault();
+        const userEmail = document.getElementById("email").value;
+        emailjs.send(
+          "service_s69ud1n",   // ← your Service ID
+          "template_x8ylvsr",  // ← your Template ID
+          { email: userEmail } // ← populate your template’s “email” variable
+        )
+        .then(() => {
+          alert("Thanks—your message has been sent!");
+          this.reset();
+        })
+        .catch(err => {
+          console.error("EmailJS error:", err);
+          alert("Oops, something went wrong. Please try again.");
         });
       });
-
-      // Mobile menu toggle placeholder
-      document.querySelector('.md\\:hidden').addEventListener('click', () => {
-        alert('Mobile menu would open here in a complete implementation');
-      });
-    </script>
+  </script>
 </body>
 </html>
