--- a/index.html
+++ b/index.html
@@ -313,5 +313,59 @@
   </div>
 </section>
 
+<!-- Success Modal -->
+<div id="success-modal" class="fixed inset-0 z-50 flex items-center justify-center hidden bg-black bg-opacity-50">
+  <div class="bg-white rounded-lg p-6 max-w-sm w-full mx-4 relative">
+    <!-- Cross Button -->
+    <button id="close-success-modal" class="absolute top-3 right-3 text-gray-400 hover:text-gray-700 text-2xl font-bold focus:outline-none" aria-label="Close">&times;</button>
+    <div class="text-center">
+      <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
+        <i class="fas fa-check text-green-600"></i>
+      </div>
+      <h3 class="mt-3 text-lg font-medium text-gray-900">
+        The event has been scheduled,<br>
+        it can be added to your calendar with the button below
+      </h3>
+      <div class="mt-4">
+        <a id="calendar-link-modal-btn"
+           href="#"
+           target="_blank"
+           class="inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-[#D4AF37] text-base font-medium text-black hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:text-sm"
+           style="min-width:220px;">
+          Schedule in your Google Calendar
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  // Listen for messages from the calendar iframe
+  window.addEventListener('message', function(event) {
+    if (event.data && event.data.type === 'calendar-link' && event.data.url) {
+      // Show the modal
+      document.getElementById('success-modal').classList.remove('hidden');
+      // Set the Google Calendar link on the modal button
+      document.getElementById('calendar-link-modal-btn').href = event.data.url;
+    }
+  });
+
+  // Close modal with the cross button
+  document.getElementById('close-success-modal').addEventListener('click', function() {
+    document.getElementById('success-modal').classList.add('hidden');
+  });
+
+  // Optional: Hide modal when user clicks outside the popup or presses Escape
+  document.addEventListener('keydown', function(e) {
+    if (e.key === 'Escape') {
+      document.getElementById('success-modal').classList.add('hidden');
+    }
+  });
+  document.getElementById('success-modal').addEventListener('click', function(e) {
+    if (e.target === this) {
+      this.classList.add('hidden');
+    }
+  });
+</script>
 </body>
 </html>
